Fix layout bug with empty footnotes.

--- a/www/css/style-grey.mac.css
+++ b/www/css/style-grey.mac.css
@@ -3609,6 +3609,7 @@ ol {
 
 .footnote-item {
 	display: flex;
+	min-height: 1lh;
 }
 
 .footnote-item > :not(.nothing) {
